--- a/project/app/templates/Principal/PrincipalDash.html
+++ b/project/app/templates/Principal/PrincipalDash.html
@@ -62,11 +62,11 @@
             <ul class="flex gap-5 ">
                 <a href="{% url 'PrincipalAddHod' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">Add HOD</li></a>
                 <a href="{% url 'logout' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">logout</li></a>
-                <a href="{% url 'home' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">HOME</li></a>
+                {% comment %} <a href="{% url 'home' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">HOME</li></a>
                 <a href="{% url 'services' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">SERVICES</li></a>
                 <a href="{% url 'about' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">ABOUT</li></a>
                 <a href="{% url 'testimonials' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">TESTIMONIALS</li></a>
-                <a href="{% url 'contact' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">CONTACT</li></a>
+                <a href="{% url 'contact' %}"><li class="hover:text-red-300 transition ease-in duration-200  ">CONTACT</li></a> {% endcomment %}
             </ul>
         </div>
     </div>
@@ -98,9 +98,6 @@
                     <div>Total Staffs</div>
                     <p id="facultyCount">{{ faculty }}</p>
                 </div>
-                <div class="w-[20rem] h-[20rem]">
-                    <canvas class="w-10 h-10" id="chart" width="1" height="1"></canvas>
-                </div> 
             </div>
         </div>
     </div>
@@ -110,45 +107,5 @@
 
     
 </body>
-<script>
 
-  
-
-    document.addEventListener('DOMContentLoaded', function () {
-        var studentCount = parseInt(document.getElementById('studentCount').innerText);
-        var facultyCount = parseInt(document.getElementById('facultyCount').innerText);
-
-        var ctx = document.getElementById('chart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['Students', 'Staffs'],
-                datasets: [{
-                    label: 'Total Count',
-                    data: [studentCount, facultyCount],
-                    backgroundColor: [
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 99, 132, 0.2)',
-                    ],
-                    borderColor: [
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 99, 132, 1)',
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: true, // Add this to make sure the chart fits within the canvas size
-                scales: {
-                    yAxes: [{
-                        ticks: {
-                            beginAtZero: true
-                        }
-                    }]
-                }
-            }
-        });
-    });
-</script>
 </html>
