--- a/project/app/templates/admin/admin.html
+++ b/project/app/templates/admin/admin.html
@@ -49,7 +49,7 @@
                                 <img class="h-full w-full object-cover rounded-full" src="{{principal_instance.principal_Profile.url}}" alt=""> <!-- Added object-cover to maintain aspect ratio and rounded-full for rounded corners -->
                             </div>
                             <div class="ml-6">
-                                <div class="text-base font-medium text-gray-900 uppercase">{{ principal_instance.user.username }}</div>
+                                <div class="text-base font-medium text-gray-900 ">{{ principal_instance.user.username }}</div>
                                 <div class="text-sm text-gray-500">{{ principal_instance.user.email }}</div>
                             </div>
                         </div>
