--- a/project/app/templates/student/StudentReg.html
+++ b/project/app/templates/student/StudentReg.html
@@ -86,15 +86,15 @@
 
         <label for="pass">Password:</label>
         <div class="relative">
-            <input class="text-black flex text-center w-full border border-gray-300 rounded-md py-1 px-3 pr-8"
-                   type="password" id="pass" name="pass" placeholder="Password" required><br>
-            <button class="absolute w-14 h-8 inset-y-0 right-0 flex items-center justify-center bg-gray-200 text-gray-800 py-1 px-2 rounded-md hover:bg-gray-300 focus:outline-none"
-                    type="button" id="togglePassVisibility">Show</button>
-        </div>
+    <input class="text-black flex text-center w-[30rem] border border-gray-300 rounded-md py-1 px-3 pr-8"
+           type="password" id="pass" name="pass" placeholder="Password" required><br>
+    <button class="absolute w-14 h-8 inset-y-0 right-0 flex items-center justify-center bg-gray-200 text-gray-800 py-1 px-2 rounded-md hover:bg-gray-300 focus:outline-none"
+            type="button" id="togglePassVisibility" onclick="togglePasswordVisibility()" >Show</button>
+</div>
 
-        <label for="pass2">Confirm Password:</label>
-        <input class="text-black flex text-center w-full border border-gray-300 rounded-md py-1 px-3"
-               type="password" id="pass2" name="pass2" placeholder="Confirm password" required>
+<label for="pass2">Confirm Password:</label>
+<input class="text-black flex text-center w-full border border-gray-300 rounded-md py-1 px-3"
+       type="password" id="pass2" name="pass2" placeholder="Confirm password" required>
 
         <label for="profile">Profile Picture:</label>
         <input class="text-white flex text-center w-full border border-gray-300 rounded-md py-1 px-3"
