--- a/project/app/templates/Principal/PrincipalViewFaculty.html
+++ b/project/app/templates/Principal/PrincipalViewFaculty.html
@@ -76,8 +76,8 @@
         </a>
             
         <div>
-            <p>Name :  {{principal.user.usename}}</p><p>{{principal.user.last_name}}</p>
-            <p>Date Of Join : {{principal.principal_Doj}}</p>
+            <p>Name :  {{principal.user.username}}</p><p>{{principal.user.last_name}}</p>
+            {% comment %} <p>Date Of Join : {{principal.principal_Doj}}</p> {% endcomment %}
         </div>
     </div>
 <div class="flex">
