--- a/project/app/templates/faculty/FacultyInternal.html
+++ b/project/app/templates/faculty/FacultyInternal.html
@@ -113,10 +113,9 @@
 {% endif %}
             
 <div >
-    <p>Name : {{faculty.user.first_name}}</p>
-    <p>Designation : {{faculty.Faculty_Designation}}</p>
-    <p>Date Of Join : {{faculty.Faculty_Doj}}</p>
-</div>
+        <p>Name : {{faculty.user.first_name}} {{faculty.user.last_name}}</p>
+        <p>Designation : {{faculty.Faculty_Designation}}</p>
+    </div>
     </div>
 
         <div class="options space-y-5 ">
