--- a/project/app/templates/faculty/FacultyNotes.html
+++ b/project/app/templates/faculty/FacultyNotes.html
@@ -123,9 +123,8 @@
     {% endif %}
             
     <div >
-        <p>Name : {{faculty.user.first_name}}</p>
+        <p>Name : {{faculty.user.first_name}} {{faculty.user.last_name}}</p>
         <p>Designation : {{faculty.Faculty_Designation}}</p>
-        <p>Date Of Join : {{faculty.Faculty_Doj}}</p>
     </div>
     </div>
 
